# physical-ai-toolchain

./: .cspell.json  .env.local.example  .gitignore  .markdownlint-cli2.jsonc  .shellcheckrc  .syft.yaml  .terraform-docs.yml  .test.ts  .tflint.hcl  AGENT_RESULT.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  codecov.yml  coverage.txt  package-lock.json  package.json  pyproject.toml  release-please-config.json  setup-dev.ps1  setup-dev.sh
data-management/viewer/: .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml  start.sh
data-management/viewer/backend/: .env.azure.example  .env.example  Dockerfile  pyproject.toml
data-management/viewer/backend/src/: __init__.py
data-management/viewer/backend/src/api/: __init__.py  config.py  csrf.py  main.py  middleware.py  rate_limiter.py  validation.py
data-management/viewer/backend/tests/: conftest.py  test_annotation_service.py  test_api_endpoints.py  test_api_fuzzing.py  test_api_fuzzing_auth.py  test_auth_unit.py  test_config.py  test_config_branches.py  test_csrf.py  test_dataset_service.py  test_dataset_service_base.py  test_dataset_service_orchestrator.py  test_datasets_router.py  test_detection.py  test_detection_service.py  test_episode_cache.py  test_export_router.py  test_handler_fallback.py  test_hdf5_export.py  test_hdf5_handler.py  test_hdf5_loader.py  test_health.py  test_joint_config_router.py  test_lerobot_handler.py  test_lerobot_loader.py  test_middleware_branches.py  test_path_validation.py  test_property_based.py  test_rate_limiter.py  test_security_middleware.py  test_validation_properties.py
data-management/viewer/backend/tests/api/: test_annotations.py  test_auth.py  test_datasets.py  test_image_transform.py  test_labels.py
data-management/viewer/backend/tests/storage/: conftest.py  test_azure.py  test_base.py  test_blob_dataset.py  test_local.py  test_serializers.py
data-management/viewer/frontend/: .npmrc  .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
data-management/viewer/frontend/src/: App.tsx  index.css  main.tsx
data-management/viewer/frontend/src/api/: ai-analysis.ts  detection.ts  export.ts
data-management/viewer/frontend/src/components/: HelpOverlay.tsx
data-management/viewer/frontend/src/hooks/: index.ts  use-ai-analysis.ts  use-annotation-workflow.ts  use-annotations.ts  use-batch-selection.ts  use-dashboard.ts  use-datasets.ts  use-dataviewer-shell-state.ts  use-episodes.ts  use-export.ts  use-joint-config.ts  use-keyboard-shortcuts.ts  use-labels.ts  use-offline-annotations.ts  use-toast.ts
data-management/viewer/frontend/src/lib/: api-client.ts  auth-config.ts  auth-headers.ts  css-filters.ts  joint-significance.ts  offline-storage.ts  playback-diagnostics.ts  playback-utils.ts  semantic-state.ts  sync-queue.ts  trajectory-graph-geometry.ts
data-management/viewer/frontend/src/stores/: annotation-store.ts  dataset-store.ts  edit-store-action-factories.ts  edit-store-frame-utils.ts  edit-store-helpers.ts  edit-store-selectors.ts  edit-store.ts  episode-store.ts  index.ts  joint-config-store.ts  label-store.ts  viewer-settings-store.ts
evaluation/: README.md  pyproject.toml
evaluation/examples/: README.md
evaluation/hil/: README.md
evaluation/metrics/: bootstrap_mlflow.py  plot-lerobot-trajectories.py  plotting.py  upload_artifacts.py
evaluation/setup/: README.md
evaluation/sil/: bimanual_robot_types.py  infer.sh  play.py  play_policy.py  policy_evaluation.py  policy_runner.py  robot_types.py  validate.sh
evaluation/sil/docker/: Dockerfile.lerobot-eval  requirements-lerobot-eval.txt
evaluation/sil/scripts/: batch-lerobot-eval.py  download_aml_model.py  download_blob_dataset.py  run_evaluation.py  submit-azureml-lerobot-eval.sh  submit-azureml-validation.sh  submit-osmo-eval.sh  submit-osmo-lerobot-eval.sh  test-lerobot-eval.py
evaluation/sil/workflows/azureml/: lerobot-eval-entry.sh  validate.yaml
evaluation/sil/workflows/osmo/: eval.yaml  lerobot-eval.yaml
evaluation/specifications/: hil-evaluation.specification.md  metrics.specification.md  sil-evaluation.specification.md
evaluation/tests/: conftest.py  test_batch_lerobot_eval.py  test_bootstrap_mlflow.py  test_download_aml_model.py  test_download_blob_dataset.py  test_plot_lerobot_trajectories.py  test_plotting.py  test_policy_evaluation.py  test_policy_runner.py  test_robot_types.py  test_run_local_lerobot_eval.py  test_test_lerobot_eval.py  test_upload_artifacts.py
evaluation/vlm_judge/: dataset.py
src/common/: blob_path_validator.py  pyproject.toml
src/dataviewer/: package-lock.json  package.json  pyproject.toml  start.sh
src/dataviewer/backend/: .env.azure.example  .env.example  Dockerfile  pyproject.toml
src/dataviewer/backend/tests/: conftest.py  test_ai_analysis.py  test_api_endpoints.py  test_dataset_service.py  test_detection_service.py  test_hdf5_handler.py  test_path_validation.py
src/dataviewer/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
src/dataviewer/frontend/src/: App.tsx  index.css  main.tsx
src/training/: pyproject.toml  requirements.txt
src/training/scripts/: launch_rsl_rl.py
src/training/scripts/lerobot/: bootstrap.py  checkpoints.py  convert_hdf5_to_lerobot.py  train.py
src/training/scripts/rsl_rl/: monitor_checkpoints.py
training/il/lerobot/: pyproject.toml  requirements.txt
training/rl/: cli_args.py  pyproject.toml  requirements.txt  simulation_shutdown.py
training/rl/scripts/: __init__.py  launch.py  launch_rsl_rl.py  skrl_mlflow_agent.py  skrl_training.py  smoke_test_azure.py  submit-azureml-training.sh  submit-osmo-training.sh  train.sh
training/rl/scripts/rsl_rl/: __init__.py  monitor_checkpoints.py  play.py  train.py
training/rl/workflows/azureml/: train.yaml
training/rl/workflows/osmo/: train-dataset.yaml  train.yaml
training/vla/lerobot/: pyproject.toml  requirements.txt
(+1569 files in other folders)
