[project]
name = "physical-ai-toolchain"
version = "0.4.0"
description = "Physical AI Toolchain for Isaac Lab training"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pydantic==2.12.5",
    "ipykernel",
    "ipywidgets",
    "tqdm",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = []

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"src/inference/scripts/act_inference_node.py" = ["E402"]
"src/inference/scripts/play_policy.py" = ["E402"]
"src/training/scripts/rsl_rl/*.py" = ["E402"]
"src/dataviewer/backend/tests/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["training", "common", "inference"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/**/conftest.py",
    "src/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.xml]
output = "coverage.xml"
