[project]
name = "physical-ai-evaluation"
version = "0.1.0"
description = "Evaluation workflow runtime dependencies"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==2.4.4",
    "azure-core==1.39.0",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.3",
    "azure-ai-ml==1.32.0",
    "marshmallow==4.3.0",
    "mlflow==3.11.1",
    "packaging==26.1",
    "psutil==7.2.2",
    "pynvml==13.0.1",
    "pyperclip==1.11.0",
    "onnx==1.21.0",
    "onnxscript==0.6.2",
    "onnxruntime-gpu==1.24.4",
    "toml==0.10.2",
    "gymnasium==1.2.3",
    "torch==2.11.0",
    "tensordict==0.12.1",
    "lerobot==0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
