[project]
name = "datasetanalysistool"
version = "0.1.0"
description = "Web-based dataset analysis and annotation tool for robot demonstration datasets"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.133.0",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "python-multipart==0.0.22",
    "python-dotenv==1.2.1",
    "aiofiles==25.1.0",
    "numpy==2.4.2",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "pandas==3.0.1",
    "pyarrow==23.0.1",
    "Pillow==12.1.1",
    "opencv-python-headless==4.13.0.92",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]
azure = [
    "aiohttp==3.13.4",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.2",
]
huggingface = [
    "huggingface-hub==1.4.1",
]
hdf5 = [
    "h5py==3.15.1",
]
export = [
    "h5py==3.15.1",
    "numpy==2.4.2",
    "Pillow==12.1.1",
]
yolo = [
    "ultralytics==8.4.16",
    "numpy==2.4.2",
    "Pillow==12.1.1",
]
all = [
    "datasetanalysistool[dev,azure,huggingface,hdf5,export]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["datasetanalysistool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.uv]
constraint-dependencies = [
    "pyjwt==2.12.1",
    "pygments==2.20.0",
]
