[project]
name = "robotics-training"
version = "0.1.0"
description = "Training workflow runtime dependencies"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26.0,<3.0.0",
    "azure-core==1.38.3",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.3",
    "azure-ai-ml==1.31.0",
    "marshmallow>=3.5,<4.3.0",
    "mlflow>=2.0.0,<4.0.0",
    "packaging>=25,<27",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "pyperclip==1.11.0",
    "azureml-mlflow==1.62.0",
    "rsl-rl-lib==5.0.1",
    "skrl>=1.4.3",
    "tensordict>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
