[project]
name = "robotics-training-rl"
version = "0.1.0"
description = "RL training workflow runtime dependencies"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.4",
    "azure-core==1.40.0",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.3",
    "azure-ai-ml==1.32.0",
    "marshmallow==4.3.0",
    "mlflow==3.11.1",
    "packaging==26.2",
    "psutil==7.2.2",
    "pynvml==13.0.1",
    "pyperclip==1.11.0",
    "cryptography==47.0.0",
    "pyjwt==2.12.1",
    "rsl-rl-lib==5.2.0",
    "skrl==2.0.0",
    "tensordict==0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
