[project]
name = "lerobot-annotation-api"
version = "0.1.0"
description = "API for LeRobot episode annotation system"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.133.0",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "python-multipart==0.0.22",
    "python-dotenv==1.2.1",
    "aiofiles==25.1.0",
    "numpy==2.4.2",
    "pyarrow==23.0.1",
    "Pillow==12.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "hypothesis>=6.100.0",
    "schemathesis==4.14.3",
]
azure = [
    "aiohttp==3.13.4",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.2",
]
analysis = [
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "pandas==3.0.1",
]
huggingface = [
    "huggingface-hub==1.4.1",
]
auth = [
    "pyjwt[crypto]==2.12.1",
]
hdf5 = [
    "h5py==3.15.1",
]
export = [
    "h5py==3.15.1",
]
yolo = [
    "ultralytics==8.4.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint]
ignore = [
    "B008",   # Depends() in function defaults is a FastAPI pattern
    "B905",   # zip() without strict= is acceptable
    "B904",   # Exception cause via constructor, not raise-from
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.uv]
constraint-dependencies = ["pygments==2.20.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
