[project]
name = "robotics-lerobot"
version = "0.1.0"
description = "LeRobot workflow runtime dependencies"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "azure-core==1.38.1",
    "azure-storage-blob==12.19.0",
    "azure-identity==1.25.2",
    "azure-ai-ml==1.31.0",
    "marshmallow>=3.5,<4.3.0",
    "mlflow>=2.0.0,<4.0.0",
    "packaging>=25,<26",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "pyperclip==1.11.0",
    "azureml-mlflow==1.61.0.post1",
    "datasets",
    "huggingface-hub[hf_xet]>=0.31.4,<1.0.0",
    "lerobot>=0.3.0,<0.4.0",
    "pyarrow",
    "torchcodec; platform_machine == 'x86_64' or platform_machine == 'AMD64'",
    "wandb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
